[package]
name = "redoxide"
version = "0.1.3"
edition = "2021"
description = "RedOxide: LLM Red Teaming"
authors = ["Waclaw Kusnierczyk <waclaw.kusnierczyk@gmail.com>"]
license = "MIT"
repository = "https://github.com/wkusnierczyk/redoxide"
exclude = [
    ".github/*"
]


[dependencies]
tokio = { version = "1.32", features = ["full"] }
async-openai = "0.18"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
futures = "0.3"
dotenv = "0.15"
reqwest = "0.11.27"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
wiremock = "0.5"
serde_json = "1.0"

[[bench]]
name = "benchmark"
harness = false